k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: takeout
  labels:
    app: takeout-platform
